--- a/index.htm
+++ b/index.htm
@@ -47,7 +47,7 @@
             <td>B.Tech</td>
             <td>AEC</td>
             <td>2027</td>
-            <td>80%</td>
+            <td>coming soon</td>
         </tr>
         <tr>
             <td>12th Grade </td>
